# HabitOS

./: .dockerignore.production  .env.example  .env.production  .gitignore  AGENTS.md  COMPLETE_CHECKLIST.md  DELIVERY_SUMMARY.md  DEPLOYMENT.md  Dockerfile  Dockerfile.production  GRADING_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  Makefile  PROJECT_STATUS.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  SCORING.md  alembic.ini  docker-compose.production.yml  docker-compose.yml  nginx.production.conf  openapi.yaml  package-lock.json  package.json  render.yaml  requirements-dev.txt  start.sh  supervisord.conf  test_pw.py
backend/: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  test_config_fix.py  test_import.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 8dfd9a133290_add_missing_impact_columns_to_behaviors.py  b96cd1f49448_initial_migration.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: __init__.py  config.py  exceptions.py  security.py
backend/app/db/: __init__.py  database.py  schema.sql
backend/app/models/: __init__.py  behavior.py  constraint.py  objective.py  optimization.py  tracking.py  user.py
backend/app/optimization/: __init__.py  (+1 more)
backend/scripts/: seed_data.py  start_production.sh  test_completion_flow.py  test_optimization_detail.py
backend/tests/: conftest.py  test_api_v1.py
backend/tests_integration/: conftest.py  test_analytics.py  test_auth.py  test_behaviors.py  test_objectives.py  test_optimization.py  test_schedule.py
(+73 files in other folders)
