[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.109.0",
    "pydantic[email]==2.5.3",
    "pydantic-settings==2.1.0",
    "uvicorn[standard]==0.27.0",
    "sqlalchemy[asyncio]==2.0.25",
    "asyncpg==0.29.0",
    "alembic==1.13.1",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.1.2",
    "python-multipart==0.0.6",
    "pulp==2.8.0",
    "scipy==1.11.4",
    "numpy==1.26.3",
    "redis==5.0.1",
    "python-json-logger==2.0.7",
    "python-dotenv==1.0.0",
    "pytest==7.4.4",
    "pytest-asyncio==0.23.2",
    "pytest-cov==4.1.0",
    "httpx==0.26.0",
    "ruff==0.1.13",
    "black==23.12.1",
    "mypy==1.8.0",
    "isort==5.13.2",
    "types-redis==4.6.0.10",
    "ipython==8.20.0",
    "ipdb==0.13.13",
    "pyjwt>=2.11.0",
    "aiosqlite>=0.22.1",
    "psycopg2-binary>=2.9.11",
]

[dependency-groups]
dev = []
